adds padding variables and text styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,3 +13,15 @@ $Graphite: #232940;
 $Light-Grey: #f7f8f9;
 $Green: #158463;
 $Red: #c94515;
+
+// Padding Variables
+$padding-4: 0.25rem;
+$padding-8: 0.5rem;
+$padding-16: 1rem;
+$padding-24: 1.5rem;
+$padding-32: 2rem;
+$padding-40: 2.5rem;
+$padding-48: 3rem;
+$padding-56: 3.5rem;
+$padding-64: 4rem;
+$padding-80: 5rem;
