--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,9 @@ $Light-Grey: #f7f8f9;
 $Green: #158463;
 $Red: #c94515;
 
+$Red-Tag: rgba($Red, 0.07);
+$Green-Tag: rgaba($Green, 0.07);
+
 // Padding Variables
 $padding-4: 0.25rem;
 $padding-8: 0.5rem;
