MMCTC-25 Warehouse Details Component and MMCTC-27 Front-End: Footer Component

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,6 +6,7 @@
     @include mobile-p3-body-small;
     display:flex;
     justify-content: center;
+    padding: 24px 0;
 
 
     @include tablet {
