--- a/pages/WarehouseDetails/WarehouseDetails.scss
+++ b/pages/WarehouseDetails/WarehouseDetails.scss
@@ -8,3 +8,15 @@
     border-radius: 5px;     
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+@media (min-width: $tablet-breakpoint) {
+    .card{
+        width: 93%;    
+    }
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .card{
+        width: 96%;    
+    }
+}
