--- a/pages/WarehouseList/WarehouseList.scss
+++ b/pages/WarehouseList/WarehouseList.scss
@@ -2,83 +2,18 @@
 @use "../../src/styles/variables" as *;
 @use "../../src/styles/mixins" as *;
 
-.primary-button {
-  @include primary-button;
-  text-align: center;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-
-  &:hover {
-    @include primary-hover-state;
-  }
-}
-
-.warehouse {
-  display: flex;
-  flex-direction: column;
-  padding: $padding-24;
-
-  &__title {
-    @include tablet-page-header;
-    color: $Instock-Black;
-    margin-bottom: $padding-16;
+.warehouse-card
+{
     display: flex;
-  }
-
-  &__search {
-    position: relative;
-    display: flex;
-    align-items: center;
-    border: 1px solid $Cloud;
-    border-radius: 20px;
-    padding: $padding-8 $padding-40 $padding-8 $padding-16;
-    background-color: $White;
-    margin-bottom: $padding-24;
-  }
-
-  &__input {
-    flex: 1;
-    border: none;
-    outline: none;
-    font-size: 1rem;
-    color: $Slate;
-    background-color: transparent;
-    padding: 0;
-  }
-
-  &__icon {
-    width: 1.25rem;
-    height: 1.25rem;
-    opacity: 0.6;
-    margin-left: auto;
-    pointer-events: none;
-  }
-
-  &__add-button {
-    @include primary-button;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    text-decoration: none;
-    font-size: 1rem;;
-    line-height:  2rem;
-    font-weight: 600;
-
-    &:hover {
-      @include primary-hover-state;
-    }
-  }
+    flex-direction: column;
 }
 
 .warehouse__list {
   &-header {
-    visibility: none;
+    visibility: hidden;
+
     @include tablet {
       visibility: visible;
-
       font-weight: 600;
       color: $Graphite;
       padding: $padding-8;
@@ -116,67 +51,59 @@
 }
 
 .warehouse__body {
+  display: flex;
+  flex-direction: column;
+
   &-row {
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid $Cloud;
     padding: $padding-8;
+  }
+
+  &-cols {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  &-col1,
+  &-col2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     @include tablet {
       flex-direction: row;
-      align-items: center;
     }
 
     @include desktop {
       flex-direction: row;
-      align-items: center;
     }
   }
-
-  &-cols 
-  {
-    display: inline-flex;
-    justify-content: space-between;
-  }
-
-  
 
   &-cell {
     display: flex;
     flex-direction: column;
     padding: $padding-8;
-    font-size: 1rem;;
+    font-size: 1rem;
     color: $Slate;
     line-height: 1.5rem;
+  }
+
+  .warehouse__cell-header {
+    font-weight: 500;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: $Graphite;
+    margin-bottom: $padding-4;
 
     @include tablet {
-      flex: 1;
-      display: block;
-      flex-direction: row;
-      align-items: center;
+      display: none;
     }
 
     @include desktop {
-      flex: 1;
-      display: block;
-      flex-direction: row;
-      align-items: center;
-    }
-
-    .warehouse__cell-header {
-      font-weight: 500;
-      font-size: 1rem;
-      text-transform: uppercase;
-      color: $Graphite;
-      margin-bottom: $padding-4;
-
-      @include tablet {
-        display: none;
-      }
-
-      @include desktop {
-        display: none;
-      }
+      display: none;
     }
   }
 
@@ -193,15 +120,10 @@
     }
   }
 
-  .warehouse__contact {
-    margin: 0;
-    font-size: 1rem;;
-    color: $Slate;
-  }
-
+  .warehouse__contact,
   .warehouse__contact-info {
     margin: 0;
-    font-size: 1rem;;
+    font-size: 1rem;
     color: $Slate;
 
     .warehouse__contact-email {
@@ -218,20 +140,14 @@
     display: flex;
     gap: $padding-8;
     align-items: center;
-    justify-content: center;
     flex-direction: row;
     justify-content: space-between;
 
     @include tablet {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
+      justify-content: flex-start;
     }
-
     @include desktop {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
+      justify-content: flex-start;
     }
 
     .warehouse__edit {
