--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -96,6 +96,7 @@
   color: $White;
   height: 2.25rem;
   border-radius: 20px;
+  border: none;
   @include tablet {
     padding: 0 $padding-16;
     height: 2.375rem;
@@ -185,4 +186,27 @@
   @media screen and (min-width: $desktop-breakpoint) {
     @content;
   }
+}
+
+// ----------- Ad Hoc -------------
+
+@mixin card-style {
+  width: 85%;    
+  margin: 0 auto;
+  background-color: #fff; 
+  border-radius: 5px;     
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  @include tablet{
+    width: 93%;
+  }
+  @include desktop{
+    width: 96%;    
+  }
+}
+
+@mixin page-title {
+  font-size: 1.75rem;
+  line-height: 2.25rem;
+  font-weight: 600;
+  margin: 24px 0px;
 }
