fixes typo in green-tag

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,7 +15,7 @@ $Green: #158463;
 $Red: #c94515;
 
 $Red-Tag: rgba($Red, 0.07);
-$Green-Tag: rgaba($Green, 0.07);
+$Green-Tag: rgba($Green, 0.07);
 
 // Padding Variables
 $padding-4: 0.25rem;
@@ -28,4 +28,3 @@ $padding-48: 3rem;
 $padding-56: 3.5rem;
 $padding-64: 4rem;
 $padding-80: 5rem;
-
