--- a/src/components/InventoryItem/InventoryItem.scss
+++ b/src/components/InventoryItem/InventoryItem.scss
@@ -4,21 +4,125 @@
 .item-details {
   &__header {
     display: flex;
-    align-items: baseline;
+    align-items: flex-end;
+    justify-content: flex-start;
+    border-bottom: 1px solid $Cloud;
+    padding: $padding-32 $padding-16 $padding-24 $padding-16;
+    margin: 0;
   }
 
   &__icon-container {
     background-color: $Instock-Indigo;
-    height: 30px;
-    width: 30px;
+    height: 2.25rem;
+    width: 2.25rem;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    @include tablet {
+      @include primary-button;
+    }
+  }
+  &__edit {
+    display: none;
+    @include tablet {
+      display: inline-block;
+      @include tablet-labels-links-buttons;
+      padding-left: $padding-4;
+    }
   }
 
-  &__icon {
-    height: 20px;
-    width: 20px;
+  &__back-icon {
+    height: 1.5rem;
+    width: 1.5rem;
   }
+
+  &__edit-icon {
+    @extend .item-details__back-icon;
+    @include tablet {
+      height: 1.25rem;
+      width: 1.25rem;
+    }
+  }
+
+  &__title {
+    @include mobile-page-header;
+    padding-left: $padding-4;
+    margin: 0;
+    @include tablet {
+      @include tablet-page-header;
+      padding-left: $padding-8;
+    }
+  }
+
+  &__container {
+    padding: 0 $padding-16 $padding-24 $padding-16;
+    @include tablet {
+      display: flex;
+    }
+  }
+  &__tablet-container-desc-cat {
+    @include tablet {
+      width: 50%;
+      margin: $padding-24;
+      border-right: 1px solid $Cloud;
+    }
+  }
+  &__tablet-container-status {
+    @include tablet {
+      width: 50%;
+      margin: $padding-24;
+    }
+  }
+  &__label {
+    @include mobile-table-header;
+    color: $Slate;
+    margin-top: $padding-16;
+    margin-bottom: $padding-4;
+    @include tablet {
+      @include tablet-table-header;
+    }
+  }
+
+  &__description,
+  &__category,
+  &__quantity,
+  &__warehouse {
+    @include mobile-p2-body-medium;
+    color: $Instock-Black;
+    padding: 0;
+    margin: 0;
+
+    @include tablet {
+      @include tablet-p2-body-medium;
+      width: 80%;
+    }
+  }
+
+  &__tag {
+    &--in-stock {
+      @include in-stock-tag;
+      margin: 0;
+    }
+
+    &--out-of-stock {
+      @include out-of-stock-tag;
+      margin: 0;
+    }
+  }
+
+  &__status-quantity-container {
+    display: flex;
+  }
+  &__status-container,
+  &__quantity-container {
+    width: 50%;
+  }
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
