--- a/pages/AddWarehouse/AddWarehouse.scss
+++ b/pages/AddWarehouse/AddWarehouse.scss
@@ -2,7 +2,7 @@
 @use '../../src/styles/mixins' as *;
 
 .card{
-    width: 85%;    
+    width: 90%;    
     margin: 0 auto;
     background-color: #fff; 
     border-radius: 5px;     
@@ -18,5 +18,68 @@
 @media (min-width: $desktop-breakpoint) {
     .card{
         width: 96%;    
+    }
+}
+
+.WarehouseAdd__header{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    justify-content: space-between;
+
+    border-bottom: 1px solid $Cloud;
+    
+    &--layout{
+        display: flex;
+        align-items: center; 
+        width: 100%;
+        padding: 0 1.5rem;
+    }
+}
+
+.arrow_back{
+    padding-right: .625rem;
+    vertical-align: middle;
+}
+
+.WarehouseAdd__title{
+    @include mobile-page-header;
+    margin: 24px 0px;
+}
+
+.edit_white-container {
+    width: 40px;  
+    height: 40px;
+    background-color: $Instock-Indigo;  
+    border-radius: 50%;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 24px;
+}
+
+.edit_white {
+    width: 24px; 
+    height: 24px;
+    border-radius: 50%;  
+}
+
+.edit_button {
+    display: none;
+}
+
+@media (min-width: $tablet-breakpoint) {
+    .edit_white-container{
+        display: none;
+    }
+    .edit_button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $Instock-Indigo; 
+        border-radius: 20px;
+        padding: 0px 16px;
+        text-decoration: none;
+        color: white; 
     }
 }
