--- a/pages/WarehouseList/WarehouseList.scss
+++ b/pages/WarehouseList/WarehouseList.scss
@@ -8,6 +8,10 @@
 }
 
 .warehouse__list {
+  display: flex;
+  flex-direction: column;
+  padding: $padding-24;
+
   &-header {
     visibility: hidden;
 
@@ -32,8 +36,14 @@
 
   &-heading {
     display: flex;
-    align-self: start;
+    align-self: center;
+    justify-content: start;
     font-weight: 200;
+    width: 45%;
+
+    &-actions{
+      justify-content: center;
+    }
   }
 
   &-row {
@@ -92,6 +102,8 @@
     line-height: 1.5rem;
     align-items: flex-start; 
     text-align: left; 
+    color: $Instock-Black;
+
 
     @include tablet {
       font-size: 0.875rem; 
@@ -149,7 +161,7 @@
     color: $Slate;
 
     .warehouse__contact-email {
-      color: $Instock-Indigo;
+      color: $Instock-Black;
       text-decoration: none;
 
       &:hover {
@@ -166,10 +178,10 @@
     justify-content: space-between;
 
     @include tablet {
-      justify-content: flex-start;
+      justify-content: center;
     }
     @include desktop {
-      justify-content: flex-start;
+      justify-content: center;  
     }
 
     .warehouse__edit {
