--- a/src/components/DeleteModal/DeleteModal.scss
+++ b/src/components/DeleteModal/DeleteModal.scss
@@ -18,7 +18,7 @@
   
   .modal {
     background: $White;
-    padding: 20px;
+    padding: 1.25rem;
     border-radius: .5rem;
     width: 90%;
     max-width: 400px;
