fix pages and paths

--- a/src/pages/WarehouseList/WarehouseList.scss
+++ b/src/pages/WarehouseList/WarehouseList.scss
@@ -1,6 +1,6 @@
-@use "../../src/App.scss" as *;
-@use "../../src/styles/variables" as *;
-@use "../../src/styles/mixins" as *;
+@use "../../App.scss" as *;
+@use "../../styles/variables" as *;
+@use "../../styles/mixins" as *;
 
 .warehouse-card {
   display: flex;
