--- a/src/pages/EditInventoryItemPage/EditInventoryItemPage.scss
+++ b/src/pages/EditInventoryItemPage/EditInventoryItemPage.scss
@@ -1,6 +1,5 @@
-@use '../../src/styles/variables' as *;
-@use '../../src/styles/mixins' as *;
-
+@use '../../../src/styles/variables' as *;
+@use '../../../src/styles/mixins' as *;
 // card
 .card{
     width: 85%;    
