adds basic form function - no error state

--- a/src/components/AddInventoryItem/AddInventoryItem.scss
+++ b/src/components/AddInventoryItem/AddInventoryItem.scss
@@ -13,6 +13,13 @@ form {
 .item-availability {
   display: flex;
   flex-direction: column;
+
+  &__quantity-visible {
+    display: inline-block;
+  }
+  &__quantity-hidden {
+    display: none;
+  }
 }
 
 input,
