--- a/src/components/AddInventoryItem/AddInventoryItem.scss
+++ b/src/components/AddInventoryItem/AddInventoryItem.scss
@@ -22,6 +22,22 @@ form {
   }
 }
 
+.add-new-item {
+  &__header {
+    display: flex;
+    align-items: baseline;
+    border-bottom: 1px solid $Cloud;
+    padding: $padding-16;
+  }
+  &__title {
+    margin: $padding-24 0 0 $padding-8;
+    @include mobile-page-header;
+  }
+  &__back-icon {
+    padding: 0;
+    margin: 0;
+  }
+}
 input,
 textarea,
 select {
